@@ -6,11 +6,8 @@ import br.com.monteiro.integrationtests.testcontainers.AbstractIntegrationTest;
 import br.com.monteiro.integrationtests.vo.AccountCredentialsVO;
 import br.com.monteiro.integrationtests.vo.BookVO;
 import br.com.monteiro.integrationtests.vo.pagedmodels.PagedModelBook;
-import br.com.monteiro.integrationtests.vo.pagedmodels.PagedModelPerson;
 import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.DeserializationFeature;
-import com.fasterxml.jackson.databind.JsonMappingException;
 import com.fasterxml.jackson.dataformat.xml.XmlMapper;
 import io.restassured.builder.RequestSpecBuilder;
 import io.restassured.filter.log.LogDetail;
@@ -22,7 +19,6 @@ import org.springframework.boot.test.context.SpringBootTest;
 
 import java.io.IOException;
 import java.util.Date;
-import java.util.List;
 
 import static io.restassured.RestAssured.given;
 import static org.hibernate.validator.internal.util.Contracts.assertNotNull;
@@ -48,7 +44,7 @@ public class BookControllerXmlTest extends AbstractIntegrationTest {
 
     @Test
     @Order(0)
-    public void authorization() throws JsonMappingException, JsonProcessingException {
+    public void authorization() {
         AccountCredentialsVO user = new AccountCredentialsVO("leandro", "admin123");
 
         var accessToken = given()
@@ -107,7 +103,7 @@ public class BookControllerXmlTest extends AbstractIntegrationTest {
 
     @Test
     @Order(2)
-    public void testUpdate() throws JsonMappingException, JsonProcessingException {
+    public void testUpdate() throws JsonProcessingException {
 
         book.setTitle("Docker Deep Dive - Updated");
 
@@ -137,7 +133,7 @@ public class BookControllerXmlTest extends AbstractIntegrationTest {
 
     @Test
     @Order(3)
-    public void testFindById() throws JsonMappingException, JsonProcessingException {
+    public void testFindById() throws JsonProcessingException {
         mockBook();
 
         var content = given().spec(specification)
@@ -166,7 +162,7 @@ public class BookControllerXmlTest extends AbstractIntegrationTest {
 
     @Test
     @Order(4)
-    public void testDelete() throws JsonMappingException, JsonProcessingException {
+    public void testDelete() {
 
         given().spec(specification)
                 .contentType(TestConfigs.CONTENT_TYPE_XML)
@@ -180,12 +176,12 @@ public class BookControllerXmlTest extends AbstractIntegrationTest {
 
     @Test
     @Order(5)
-    public void testFindAll() throws JsonMappingException, JsonProcessingException {
+    public void testFindAll() throws JsonProcessingException {
 
         var content = given().spec(specification)
                 .contentType(TestConfigs.CONTENT_TYPE_XML)
                 .accept(TestConfigs.CONTENT_TYPE_XML)
-                .queryParams("page", 0 , "size", 5, "direction", "asc")
+                .queryParams("page", 0, "size", 5, "direction", "asc")
                 .when()
                 .get()
                 .then()
@@ -198,7 +194,7 @@ public class BookControllerXmlTest extends AbstractIntegrationTest {
 
         var books = wrapper.getContent();
 
-        BookVO foundBookOne = books.get(0);
+        BookVO foundBookOne = books.getFirst();
 
         assertNotNull(foundBookOne.getId());
         assertNotNull(foundBookOne.getTitle());
@@ -225,7 +221,7 @@ public class BookControllerXmlTest extends AbstractIntegrationTest {
 
     @Test
     @Order(6)
-    public void testFindAllWithoutToken() throws JsonMappingException, JsonProcessingException {
+    public void testFindAllWithoutToken() {
 
         RequestSpecification specificationWithoutToken = new RequestSpecBuilder()
                 .setBasePath("/api/book/v1")
